--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://github.com/OlyaTrush/test.git",
+  
+    "repository": {
+      "type": "git",
+      "url": "ghttps://github.com/OlyaTrush/test"
+    },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
